# IC-GVINS

./: README.md
config/: visualization.rviz
config/kaist/: caculEx.py  gvins.yaml  kaist_18-37.yaml  kaist_38-39.yaml  kaist_urban18-37_extrinsic_calculator.PY  kaist_urban38_extrinsic_calculator.PY
goodresults/T20230228214508/: GVINS.ERROR  GVINS.INFO  GVINS.WARNING  GVINS.divenire-TM1801.divenire.log.ERROR.20230228-214611.1025534  GVINS.divenire-TM1801.divenire.log.WARNING.20230228-214510.1025534  gvins.nav  gvins.yaml  statistics.txt  tracking.txt  trajectory.csv
goodresults/urban30_17/: GVINS.ERROR  GVINS.INFO  GVINS.WARNING  GVINS.divenire-System-Product-Name.divenire.log.ERROR.20230327-171525.15025  GVINS.divenire-System-Product-Name.divenire.log.WARNING.20230327-171451.15025  gvins.nav  gvins.yaml  mappoint.txt  statistics.txt  tracking.txt  trajectory.csv
goodresults/urban31_67m/: GVINS.ERROR  GVINS.INFO  GVINS.WARNING  GVINS.divenire-System-Product-Name.divenire.log.ERROR.20230327-103217.4628  GVINS.divenire-System-Product-Name.divenire.log.WARNING.20230327-103208.4628  gvins.nav  gvins.yaml  mappoint.txt  statistics.txt  tracking.txt  trajectory.csv
goodresults/urban32_29.68/: GVINS.ERROR  GVINS.INFO  GVINS.WARNING  GVINS.divenire-System-Product-Name.divenire.log.ERROR.20230327-110436.22991  GVINS.divenire-System-Product-Name.divenire.log.WARNING.20230327-110423.22991  gvins.nav  gvins.yaml  statistics.txt  tracking.txt  trajectory.csv
goodresults/urban33_18.74/: GVINS.ERROR  GVINS.INFO  GVINS.WARNING  GVINS.divenire-System-Product-Name.divenire.log.ERROR.20230327-154851.22055  GVINS.divenire-System-Product-Name.divenire.log.WARNING.20230327-154839.22055  gvins.nav  gvins.yaml  statistics.txt  tracking.txt  trajectory.csv
goodresults/urban34_25/: GVINS.ERROR  GVINS.INFO  GVINS.WARNING  GVINS.divenire-System-Product-Name.divenire.log.ERROR.20230327-112434.22561  GVINS.divenire-System-Product-Name.divenire.log.WARNING.20230327-112337.22561  gvins.nav  gvins.yaml  mappoint.txt  statistics.txt  tracking.txt  trajectory.csv
goodresults/urban35_13.3/: GVINS.ERROR  GVINS.INFO  GVINS.WARNING  GVINS.divenire-System-Product-Name.divenire.log.ERROR.20230327-113407.1060  GVINS.divenire-System-Product-Name.divenire.log.INFO.20230327-113326.1060  gvins.nav  gvins.yaml  mappoint.txt  statistics.txt  tracking.txt  (+2 more)
ic_gvins/: CMakeLists.txt
ic_gvins/ROS/: CMakeLists.txt  fusion_ros.cc
ic_gvins/example/: CMakeLists.txt
ic_gvins/example/ROS/: drawer_rviz.cc  fusion_raw.cc  fusion_raw.h  fusion_ros.cc  fusion_ros.h
ic_gvins/launch/: ic_gvins_raw.launch  ic_gvins_ros.launch
ic_gvins/libIcGvins/: CMakeLists.txt
ic_gvins/libIcGvins/include/: ic_gvins.h
ic_gvins/libIcGvins/include/common/: gpstime.h  logging.h  timecost.h  types.h
ic_gvins/libIcGvins/include/fileio/: filesaver.h
ic_gvins/libIcGvins/include/preintegration/: integration_state.h
ic_gvins/libIcGvins/include/tracking/: frame.h  mappoint.h
ic_gvins/libIcGvins/src/: ic_gvins.cc
ic_gvins/libIcGvins/src/fileio/: fileloader.cc  filesaver.cc
ic_gvins/libIcGvins/src/misc/: misc.cc
ic_gvins/libIcGvins/src/preintegration/: preintegration_earth_odo.cc  preintegration_odo.cc
ic_gvins/libIcGvins/src/tracking/: camera.cc  drawer.cc  frame.cc  tracking.cc
scripts/: camera_extrinsics_convert.py  gps2unix.py  groundTruth_2_ICGVINS_formate.py  groundTruth_unix2gps_time.py
scripts/bagconvert/: CMakeLists.txt  gpstime.h  main.cc
(+126 files in other folders)
